--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         비즈니스의 <span class="text-main-light">답</span>이 되는<br>
         <span class="text-main-light">캐시답</span>
       </h2>
-      <img class="absolute top-[270px] left-1/2 ml-28" src="/src/imgs/section-1-img.png" alt="섹션1 이미지">
+      <img class="absolute top-[270px] left-1/2 ml-28" src="imgs/section-1-img.png" alt="섹션1 이미지">
     </div>
   </section>
   <section class="section-2">
@@ -44,7 +44,7 @@
           <div class="px-6 pt-3 bg-white text-2xl leading-none text-main-light text-center font-jua">핵심<br>성능<br>+</div>
         </div>
       </div>
-      <img class="absolute -bottom-[150px] left-1/2 -ml-20" src="/src/imgs/section-2-img.png" alt="섹션2 이미지">
+      <img class="absolute -bottom-[150px] left-1/2 -ml-20" src="imgs/section-2-img.png" alt="섹션2 이미지">
     </div>
   </section>
   <section class="section-3 sm:h-[400px] md:h-[700px] lg:h-[1000px] bg-cover">
@@ -54,22 +54,22 @@
         <div class="basis-1/6 pt-20 opacity-70">
           <h3 class="font-dohyeon text-4xl text-main-light">오차범위 Down!</h3>
           <p class="mt-3 mb-5 text-xl leading-relaxed">세밀한 직업군 분류로,<br>설문 타켓의 오차 범위를<br>상당히 줄여줍니다.</p>
-          <img src="/src/imgs/section-3-col-1-img.png" alt="icons">
+          <img src="imgs/section-3-col-1-img.png" alt="icons">
         </div>
         <div class="basis-1/3 text-center">
-          <img src="/src/imgs/section-3-img.png" alt="섹션3 이미지" class="mx-auto">
+          <img src="imgs/section-3-img.png" alt="섹션3 이미지" class="mx-auto">
         </div>
         <div class="basis-1/6 pt-20 opacity-70">
           <h3 class="font-dohyeon text-4xl text-main-light">시간낭비 Down!</h3>
           <p class="mt-3 mb-5 text-xl leading-relaxed">나에게 꼭 맞는<br>설문참여 알림으로<br>시간낭비를 줄여줍니다.</p>
-          <img src="/src/imgs/section-3-col-3-img.png" alt="icons">
+          <img src="imgs/section-3-col-3-img.png" alt="icons">
         </div>
       </div>
     </div>
   </section>
   <section class="section-4 py-16 sm:h-[400px] md:h-[700px] lg:h-[1000px] bg-main-dark text-white">
     <div class="container relative lg:mx-auto h-full">
-      <img src="/src/imgs/section-4-img1.png" alt="섹션4 이미지" class="absolute left-[50%] -ml-[650px]">
+      <img src="imgs/section-4-img1.png" alt="섹션4 이미지" class="absolute left-[50%] -ml-[650px]">
       <h3 class="absolute top-[130px] right-[50%] -mr-[470px] font-dohyeon text-6xl text-main-light">설문 참여하고 캐시받자!</h3>
       <p class="absolute top-[210px] right-[50%] -mr-[470px] text-2xl leading-relaxed opacity-80 text-right">
         1개의 질문 답변만으로 1차 설문완성.<br>
@@ -77,13 +77,13 @@
         캐시는 어플내에서 자유롭게 현급처럼<br>
         사용가능합니다.
       </p>
-      <img src="/src/imgs/section-4-img2.png" alt="섹션4 이미지2" class="absolute top-[450px] left-[50%] ml-[180px]">
+      <img src="imgs/section-4-img2.png" alt="섹션4 이미지2" class="absolute top-[450px] left-[50%] ml-[180px]">
     </div>
   </section>
   <section class="section-5 bg-main-light text-white">
     <div class="container lg:mx-auto py-10 h-full">
       <div class="relative h-[1077px]">
-        <img src="/src/imgs/section-5-img1.png" alt="섹션5 이미지" class="absolute left-1/2 -ml-[200px]">
+        <img src="imgs/section-5-img1.png" alt="섹션5 이미지" class="absolute left-1/2 -ml-[200px]">
         <h3 class="absolute top-[90px] left-1/2 -ml-[550px] font-dohyeon text-6xl text-green-900">설문 결과를 한눈에!</h3>
         <p class="absolute top-[170px] left-1/2 -ml-[550px] text-2xl leading-relaxed opacity-80">
           1차설문 결과와 2차설문 결과를<br>
@@ -93,7 +93,7 @@
         </p>
       </div>
       <div class="relative h-[821px]">
-        <img src="/src/imgs/section-5-img2.png" alt="섹션5 이미지2" class="absolute right-1/2 -mr-[400px]">
+        <img src="imgs/section-5-img2.png" alt="섹션5 이미지2" class="absolute right-1/2 -mr-[400px]">
         <div class="absolute top-1/2 left-1/2 -mt-48 -ml-[400px]">
           <h3 class="font-dohyeon text-6xl text-green-900">전문 멘토에게<br>대면 컨설팅까지!</h3>
           <p class="my-5 text-2xl leading-relaxed opacity-80">
@@ -119,7 +119,7 @@
         서울 서초구 강남대로99길 33 영빌딩 5층 501호
       </div>
       <div class="basis-1/3">
-        <img src="/src/imgs/logo-invert.png" alt="로고 역상" class="ml-auto mt-4 mb-3">
+        <img src="imgs/logo-invert.png" alt="로고 역상" class="ml-auto mt-4 mb-3">
         <p class="opacity-10 text-right">Since 2016<br>&copy; Bizcowork all rights reserved</p>
       </div>
     </div>
