에니메이션 추가

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
           <div class="px-6 pt-3 bg-white text-2xl leading-none text-main-light text-center font-jua">핵심<br>성능<br>+</div>
         </div>
       </div>
-      <img src="imgs/section-2-img.png" alt="섹션2 이미지" class="mx-auto mt-10 lg:mt-0 lg:w-1/2">
+      <img src="imgs/section-2-img.png" alt="섹션2 이미지" class="mx-auto mt-10 lg:mt-0 lg:w-1/2" data-aos="fade-left">
     </div>
   </section>
   <section class="section-3 snap-start bg-cover">
