--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <title>캐시답</title>
   <meta charset="UTF-8">
@@ -7,12 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Jua&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Jua&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
-  <script nomodule src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.6.0/polyfill.min.js" crossorigin="anonymous"></script>
-  <script nomodule src="https://polyfill.io/v3/polyfill.min.js?features=Object.assign%2CElement.prototype.append%2CNodeList.prototype.forEach%2CCustomEvent%2Csmoothscroll" crossorigin="anonymous"></script>
+  <script nomodule src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.6.0/polyfill.min.js"
+    crossorigin="anonymous"></script>
+  <script nomodule
+    src="https://polyfill.io/v3/polyfill.min.js?features=Object.assign%2CElement.prototype.append%2CNodeList.prototype.forEach%2CCustomEvent%2Csmoothscroll"
+    crossorigin="anonymous"></script>
 </head>
+
 <body class="snap-y snap-mandatory overflow-x-hidden overflow-y-scroll text-white">
   <header class="bg-white py-4">
     <div class="container max-w-5xl m-auto px-8 xl:px-0 flex items-center">
@@ -20,8 +27,7 @@
         <img src="imgs/logo.png" alt="로고">
       </div>
       <div class="basis-1/2">
-        <a href="javascript:void(0)" 
-          class="block w-3/4 sm:w-[15rem] m-auto py-1 md:py-2
+        <a href="javascript:void(0)" class="block w-3/4 sm:w-[15rem] m-auto py-1 md:py-2
             text-center text-main-dark 
             border-solid border-8 border-main-dark rounded-full 
             text-xl sm:text-2xl font-jua">
@@ -32,22 +38,19 @@
   </header>
   <section class="section-1 snap-start bg-cover">
     <div class="container max-w-5xl mx-auto pt-20 pb-10">
-      <h2 class="font-dohyeon text-5xl sm:text-6xl text-center leading-snug"
-        data-aos="fade-down">
+      <h2 class="fixed left-1/2 translate-x-[-50vw] font-dohyeon text-5xl sm:text-6xl text-center leading-snug"
+        data-aos="fade-down" data-aos-anchor="">
         당신의 <span class="text-main-light">답</span>이<br>
         비즈니스의 <span class="text-main-light">답</span>이 되는<br>
         <span class="text-main-light">캐시답</span>
       </h2>
-      <img class="mx-auto w-3/4 sm:w-auto lg:-mt-12 lg:ml-[45vw] xl:ml-[40vw]" 
-        data-aos="fade-up"
-        src="imgs/section-1-img.png" 
-        alt="섹션1 이미지">
+      <img class="fixed top-16 mx-auto w-3/4 sm:w-auto lg:-mt-12 lg:ml-[45vw] xl:ml-[40vw]" data-aos="fade-up"
+        src="imgs/section-1-img.png" alt="섹션1 이미지">
     </div>
   </section>
   <section class="section-2 snap-start">
     <div class="container max-w-5xl mx-auto pt-20 lg:flex justify-center">
-      <div class="lg:basis-1/2 lg:ml-auto text-center lg:text-left"
-        data-aos="fade-right">
+      <div class="lg:basis-1/2 lg:ml-auto text-center lg:text-left" data-aos="fade-right">
         <h2 class="lg:mt-16 font-dohyeon text-5xl lg:text-6xl text-green-900">원터치로 설문을 완성!</h2>
         <p class="my-5 text-2xl leading-relaxed font-noto">
           핵심기능, 핵심가치, 핵심성능의<br>키워드만 넣으면 자동으로<br>설문을 생성합니다.
@@ -63,8 +66,7 @@
   </section>
   <section class="section-3 snap-start bg-cover">
     <div class="container max-w-5xl mx-auto pt-10 grid place-items-center">
-      <h2 class="px-10 font-dohyeon text-5xl lg:text-6xl text-center leading-snug"
-        data-aos="fade-down">
+      <h2 class="px-10 font-dohyeon text-5xl lg:text-6xl text-center leading-snug" data-aos="fade-down">
         세밀한 직업군 분<span class="text-main-light">류로 매칭률 Up!</span>
       </h2>
       <div class="flex w-full justify-around lg:justify-between items-center flex-col lg:flex-row">
@@ -74,9 +76,7 @@
           <img src="imgs/section-3-col-1-img.png" alt="icons">
         </div>
         <div class="mt-16 lg:my-10 order-3 lg:order-2 max-h-96 lg:max-h-screen overflow-hidden">
-          <img src="imgs/section-3-img.png" alt="섹션3 이미지" 
-            class="mx-auto"
-            data-aos="zoom-in">
+          <img src="imgs/section-3-img.png" alt="섹션3 이미지" class="mx-auto" data-aos="zoom-in">
         </div>
         <div class="pt-20 order-2 lg:order-3" data-aos="fade-down">
           <h3 class="font-dohyeon text-4xl text-main-light">시간낭비 Down!</h3>
@@ -88,23 +88,18 @@
   </section>
   <section class="section-4 snap-start py-16 bg-main-dark lg:px-10">
     <div class="container max-w-5xl mx-auto lg:relative">
-      <img src="imgs/section-4-img1.png" alt="섹션4 이미지"
-        class="h-fit lg:w-3/5"
-        data-aos="fade-right">
+      <img src="imgs/section-4-img1.png" alt="섹션4 이미지" class="h-fit lg:w-3/5" data-aos="fade-right">
       <div class="lg:absolute top-20 right-0">
-        <h3 class="text-center lg:text-right font-dohyeon text-5xl md:text-6xl text-main-light"
-          data-aos="fade-left">
+        <h3 class="text-center lg:text-right font-dohyeon text-5xl md:text-6xl text-main-light" data-aos="fade-left">
           설문 참여하고 캐시받자!
         </h3>
-        <p class="lg:my-10 text-2xl leading-relaxed text-center lg:text-right"
-          data-aos="fade-left">
+        <p class="lg:my-10 text-2xl leading-relaxed text-center lg:text-right" data-aos="fade-left">
           1개의 질문 답변만으로 1차 설문완성.<br>
           2차 설문까지 완료하면 캐시가 쏟아집니다.<br>
           캐시는 어플내에서 자유롭게 현급처럼<br>
           사용가능합니다.
         </p>
-        <img src="imgs/section-4-img2.png" alt="섹션4 이미지2"
-          class="hidden lg:block lg:ml-auto lg:mr-20"
+        <img src="imgs/section-4-img2.png" alt="섹션4 이미지2" class="hidden lg:block lg:ml-auto lg:mr-20"
           data-aos="fade-left">
       </div>
     </div>
@@ -113,44 +108,36 @@
     <div class="container max-w-5xl mx-auto py-10">
       <div class="mb-16 sm:mb-0 overflow-hidden md:relative">
         <div class="md:absolute md:top-20 md:left-[128px] lg:left-[90px] xl:left-[60px]">
-          <h3 class="text-center md:text-left font-dohyeon text-5xl md:text-6xl text-green-900"
-            data-aos="fade">
+          <h3 class="text-center md:text-left font-dohyeon text-5xl md:text-6xl text-green-900" data-aos="fade">
             설문 결과를 한눈에!
           </h3>
-          <p class="mt-10 text-center md:text-left text-2xl leading-relaxed"
-            data-aos="fade">
+          <p class="mt-10 text-center md:text-left text-2xl leading-relaxed" data-aos="fade">
             1차설문 결과와 2차설문 결과를<br>
             상세하게 확인 가능합니다.<br>
             KANO 설문결과로 품질 속성 등<br>
             입체적인 결과를 확인하세요.
           </p>
         </div>
-        <img src="imgs/section-5-img1.png" alt="섹션5 이미지" 
-          class="md:float-right md:w-2/3 md:ml-[70vw] md:mt-20 lg:m-0 md:pl-40"
-          data-aos="zoom-out">
+        <img src="imgs/section-5-img1.png" alt="섹션5 이미지"
+          class="md:float-right md:w-2/3 md:ml-[70vw] md:mt-20 lg:m-0 md:pl-40" data-aos="zoom-out">
       </div>
       <div class="md:flex justify-center items-center">
         <div class="md:basis-1/2 md:pl-32 text-center md:text-left">
-          <h3 class="font-dohyeon text-5xl md:text-6xl text-green-900"
-            data-aos="fade">
+          <h3 class="font-dohyeon text-5xl md:text-6xl text-green-900" data-aos="fade">
             전문 멘토에게<br>대면 컨설팅까지!
           </h3>
-          <p class="mt-5 mb-10 text-2xl leading-relaxed"
-            data-aos="fade">
+          <p class="mt-5 mb-10 text-2xl leading-relaxed" data-aos="fade">
             컨설팅은,<br>
             설문 결과를 활용하는데에<br>
             활용을 더욱 높일 수 있습니다.<br>
             어플에서 버튼하나로 신청하세요!
           </p>
-          <a href="javascript:void(0)" 
-            class="py-2 px-10 rounded-full font-noto font-bold text-lg bg-white text-green-900"
-            data-aos="fade">
+          <a href="javascript:void(0)"
+            class="py-2 px-10 rounded-full font-noto font-bold text-lg bg-white text-green-900" data-aos="fade">
             컨설팅 문의 보내기
           </a>
         </div>
-        <img src="imgs/section-5-img2.png" alt="섹션5 이미지2" 
-          class="h-fit mx-auto"
-          data-aos="zoom-out">
+        <img src="imgs/section-5-img2.png" alt="섹션5 이미지2" class="h-fit mx-auto" data-aos="zoom-out">
       </div>
     </div>
   </section>
@@ -174,7 +161,8 @@
 
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
-    AOS.init();
+    AOS.init({ duration: 1500 });
   </script>
 </body>
+
 </html>
