--- a/public/index.html
+++ b/public/index.html
@@ -37,20 +37,24 @@
     </div>
   </header>
   <section class="section-1 snap-start bg-cover">
-    <div class="container max-w-5xl mx-auto pt-20 pb-10">
-      <h2 class="fixed left-1/2 translate-x-[-50vw] font-dohyeon text-5xl sm:text-6xl text-center leading-snug"
-        data-aos="fade-down" data-aos-anchor="">
+    <div class="h-[100vh]"></div>
+    <div class="sticky top-0 container max-w-5xl mx-auto pt-20 pb-10">
+      <h2 class="font-dohyeon text-5xl sm:text-6xl text-center leading-snug" 
+        data-aos="fade-in" data-aos-mirror="false" data-aos-anchor=".section-1__keyframe-2">
         당신의 <span class="text-main-light">답</span>이<br>
         비즈니스의 <span class="text-main-light">답</span>이 되는<br>
         <span class="text-main-light">캐시답</span>
       </h2>
-      <img class="fixed top-16 mx-auto w-3/4 sm:w-auto lg:-mt-12 lg:ml-[45vw] xl:ml-[40vw]" data-aos="fade-up"
+      <img class="mx-auto w-3/4 sm:w-auto lg:-mt-12 lg:ml-[45vw] xl:ml-[40vw]" data-aos="fade-up"
         src="imgs/section-1-img.png" alt="섹션1 이미지">
     </div>
+    <div class="section-1__keyframe-2 h-[50vh]"></div>
   </section>
   <section class="section-2 snap-start">
-    <div class="container max-w-5xl mx-auto pt-20 lg:flex justify-center">
-      <div class="lg:basis-1/2 lg:ml-auto text-center lg:text-left" data-aos="fade-right">
+    <div class="h-[50vh]"></div>
+    <div class="sticky top-0 container max-w-5xl mx-auto pt-20 lg:flex justify-center">
+      <div class="lg:basis-1/2 lg:ml-auto text-center lg:text-left" 
+        data-aos="fade-right" data-aos-anchor=".section-2__keyframe-2">
         <h2 class="lg:mt-16 font-dohyeon text-5xl lg:text-6xl text-green-900">원터치로 설문을 완성!</h2>
         <p class="my-5 text-2xl leading-relaxed font-noto">
           핵심기능, 핵심가치, 핵심성능의<br>키워드만 넣으면 자동으로<br>설문을 생성합니다.
@@ -63,55 +67,64 @@
       </div>
       <img src="imgs/section-2-img.png" alt="섹션2 이미지" class="mx-auto mt-10 lg:mt-0 lg:w-1/2" data-aos="fade-left">
     </div>
+    <div class="section-2__keyframe-2 h-[50vh]"></div>
   </section>
   <section class="section-3 snap-start bg-cover">
-    <div class="container max-w-5xl mx-auto pt-10 grid place-items-center">
+    <div class="h-[50vh]"></div>
+    <div class="sticky top-0 container max-w-5xl mx-auto pt-10 grid place-items-center">
       <h2 class="px-10 font-dohyeon text-5xl lg:text-6xl text-center leading-snug" data-aos="fade-down">
         세밀한 직업군 분<span class="text-main-light">류로 매칭률 Up!</span>
       </h2>
       <div class="flex w-full justify-around lg:justify-between items-center flex-col lg:flex-row">
-        <div class="pt-10 lg:pt-20 order-1" data-aos="fade-down">
+        <div class="pt-10 lg:pt-20 order-1" data-aos="fade-down" data-aos-anchor=".section-3__keyframe-3">
           <h3 class="font-dohyeon text-4xl text-main-light">오차범위 Down!</h3>
           <p class="mt-3 mb-5 text-xl leading-relaxed">세밀한 직업군 분류로,<br>설문 타켓의 오차 범위를<br>상당히 줄여줍니다.</p>
           <img src="imgs/section-3-col-1-img.png" alt="icons">
         </div>
         <div class="mt-16 lg:my-10 order-3 lg:order-2 max-h-96 lg:max-h-screen overflow-hidden">
-          <img src="imgs/section-3-img.png" alt="섹션3 이미지" class="mx-auto" data-aos="zoom-in">
+          <img src="imgs/section-3-img.png" alt="섹션3 이미지" class="mx-auto" data-aos="zoom-in" data-aos-anchor=".section-3__keyframe-2">
         </div>
-        <div class="pt-20 order-2 lg:order-3" data-aos="fade-down">
+        <div class="pt-20 order-2 lg:order-3" data-aos="fade-down" data-aos-anchor=".section-3__keyframe-3">
           <h3 class="font-dohyeon text-4xl text-main-light">시간낭비 Down!</h3>
           <p class="mt-3 mb-5 text-xl leading-relaxed">나에게 꼭 맞는<br>설문참여 알림으로<br>시간낭비를 줄여줍니다.</p>
           <img src="imgs/section-3-col-3-img.png" alt="icons">
         </div>
       </div>
     </div>
+    <div class="section-3__keyframe-2 h-[50vh]"></div>
+    <div class="section-3__keyframe-3 h-[25vh]"></div>
+    <div class="section-3__keyframe-4 h-[25vh]"></div>
   </section>
   <section class="section-4 snap-start py-16 bg-main-dark lg:px-10">
-    <div class="container max-w-5xl mx-auto lg:relative">
+    <div class="h-[50vh]"></div>
+    <div class="sticky top-0 container max-w-5xl mx-auto">
       <img src="imgs/section-4-img1.png" alt="섹션4 이미지" class="h-fit lg:w-3/5" data-aos="fade-right">
       <div class="lg:absolute top-20 right-0">
-        <h3 class="text-center lg:text-right font-dohyeon text-5xl md:text-6xl text-main-light" data-aos="fade-left">
+        <h3 class="text-center lg:text-right font-dohyeon text-5xl md:text-6xl text-main-light" data-aos="fade-left" data-aos-anchor=".section-4__keyframe-2">
           설문 참여하고 캐시받자!
         </h3>
-        <p class="lg:my-10 text-2xl leading-relaxed text-center lg:text-right" data-aos="fade-left">
+        <p class="lg:my-10 text-2xl leading-relaxed text-center lg:text-right" data-aos="fade-left" data-aos-anchor=".section-4__keyframe-3">
           1개의 질문 답변만으로 1차 설문완성.<br>
           2차 설문까지 완료하면 캐시가 쏟아집니다.<br>
           캐시는 어플내에서 자유롭게 현급처럼<br>
           사용가능합니다.
         </p>
         <img src="imgs/section-4-img2.png" alt="섹션4 이미지2" class="hidden lg:block lg:ml-auto lg:mr-20"
-          data-aos="fade-left">
+          data-aos="fade-left" data-aos-anchor=".section-4__keyframe-3">
       </div>
     </div>
+    <div class="section-4__keyframe-2 h-[25vh]"></div>
+    <div class="section-4__keyframe-3 h-[25vh]"></div>
   </section>
   <section class="section-5 snap-start bg-main-light">
-    <div class="container max-w-5xl mx-auto py-10">
+    <div class="keyframe-1 h-[50vh]"></div>
+    <div class="sticky top-0 container max-w-5xl mx-auto py-10">
       <div class="mb-16 sm:mb-0 overflow-hidden md:relative">
         <div class="md:absolute md:top-20 md:left-[128px] lg:left-[90px] xl:left-[60px]">
-          <h3 class="text-center md:text-left font-dohyeon text-5xl md:text-6xl text-green-900" data-aos="fade">
+          <h3 class="text-center md:text-left font-dohyeon text-5xl md:text-6xl text-green-900" data-aos="fade" data-aos-anchor=".section-5__keyframe-2">
             설문 결과를 한눈에!
           </h3>
-          <p class="mt-10 text-center md:text-left text-2xl leading-relaxed" data-aos="fade">
+          <p class="mt-10 text-center md:text-left text-2xl leading-relaxed" data-aos="fade" data-aos-anchor=".section-5__keyframe-3">
             1차설문 결과와 2차설문 결과를<br>
             상세하게 확인 가능합니다.<br>
             KANO 설문결과로 품질 속성 등<br>
@@ -121,12 +134,19 @@
         <img src="imgs/section-5-img1.png" alt="섹션5 이미지"
           class="md:float-right md:w-2/3 md:ml-[70vw] md:mt-20 lg:m-0 md:pl-40" data-aos="zoom-out">
       </div>
+    </div>
+    <div class="section-5__keyframe-2 h-[25vh]"></div>
+    <div class="section-5__keyframe-3 h-[25vh]"></div>
+  </section>
+  <section class="section-6 snap-start bg-main-light">
+    <div class="keyframe-1 h-[50vh]"></div>
+    <div class="sticky top-0 container max-w-5xl mx-auto py-10">
       <div class="md:flex justify-center items-center">
         <div class="md:basis-1/2 md:pl-32 text-center md:text-left">
-          <h3 class="font-dohyeon text-5xl md:text-6xl text-green-900" data-aos="fade">
+          <h3 class="font-dohyeon text-5xl md:text-6xl text-green-900" data-aos="fade" data-aos-anchor=".section-6__keyframe-2">
             전문 멘토에게<br>대면 컨설팅까지!
           </h3>
-          <p class="mt-5 mb-10 text-2xl leading-relaxed" data-aos="fade">
+          <p class="mt-5 mb-10 text-2xl leading-relaxed" data-aos="fade" data-aos-anchor=".section-6__keyframe-2">
             컨설팅은,<br>
             설문 결과를 활용하는데에<br>
             활용을 더욱 높일 수 있습니다.<br>
@@ -140,6 +160,8 @@
         <img src="imgs/section-5-img2.png" alt="섹션5 이미지2" class="h-fit mx-auto" data-aos="zoom-out">
       </div>
     </div>
+    <div class="section-6__keyframe-2 h-[25vh]"></div>
+    <div class="section-6__keyframe-3 h-[25vh]"></div>
   </section>
   <footer class="pt-10 pb-20 px-10 md:px-20 xl:px-0">
     <div class="container max-w-5xl mx-auto sm:flex flex-row justify-around text-sm leading-relaxed">
