iOS AdHoc 설치 페이지 생성, 배포 설정 변경

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
     href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Jua&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.9/fullpage.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
   <script nomodule src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.6.0/polyfill.min.js"
@@ -22,7 +21,7 @@
     crossorigin="anonymous"></script>
 </head>
 
-<body class="fullpage h-[100vh] overflow-x-hidden overflow-y-scroll text-white">
+<body class="h-[100vh] overflow-x-hidden overflow-y-scroll text-white">
   <header class="bg-white py-4">
     <div class="container max-w-5xl m-auto px-8 xl:px-0 flex items-center">
       <div class="basis-1/2">
@@ -40,7 +39,7 @@
   </header>
   <i class="scroll-down-arrow fa-solid fa-chevron-down z-40"></i>
   <section class="section-1 bg-cover">
-    <div class="h-[100vh]"></div>
+    <div class="h-[50vh]"></div>
     <div class="sticky top-0 container max-w-5xl mx-auto pt-20 pb-10">
       <h2 class="font-dohyeon text-5xl sm:text-6xl text-center leading-snug" 
         data-aos="fade-in" data-aos-anchor=".section-1__keyframe-2">
@@ -48,10 +47,11 @@
         비즈니스의 <span class="text-main-light">답</span>이 되는<br>
         <span class="text-main-light">캐시답</span>
       </h2>
-      <img class="mx-auto w-3/4 sm:w-auto lg:-mt-12 lg:ml-[45vw] xl:ml-[40vw]" data-aos="fade-up"
+      <img class="mx-auto w-3/4 sm:w-auto lg:-mt-12 lg:ml-[45vw] xl:ml-[40vw]" 
+        data-aos="fade-up" 
         src="imgs/section-1-img.png" alt="섹션1 이미지">
     </div>
-    <div class="section-1__keyframe-2 h-[50vh]"></div>
+    <div class="section-1__keyframe-2 h-[25vh]"></div>
   </section>
   <section class="section-2">
     <div class="h-[50vh]"></div>
@@ -68,12 +68,12 @@
           <div class="px-6 pt-3 bg-white text-2xl leading-none text-main-light text-center font-jua">핵심<br>성능<br>+</div>
         </div>
       </div>
-      <img src="imgs/section-2-img.png" alt="섹션2 이미지" class="mx-auto mt-10 lg:mt-0 lg:w-1/2" data-aos="fade-left">
+      <img src="imgs/section-2-img.png" alt="섹션2 이미지" class="mx-auto mt-10 lg:mt-0 lg:w-1/2" data-aos="zoom-out-left">
     </div>
-    <div class="section-2__keyframe-2 h-[50vh]"></div>
+    <div class="section-2__keyframe-2 h-[25vh]"></div>
   </section>
   <section class="section-3 bg-cover">
-    <div class="h-[50vh]"></div>
+    <div class="h-[25vh]"></div>
     <div class="sticky top-0 container max-w-5xl mx-auto pt-10 grid place-items-center">
       <h2 class="px-10 font-dohyeon text-5xl lg:text-6xl text-center leading-snug" data-aos="fade-down">
         세밀한 직업군 분<span class="text-main-light">류로 매칭률 Up!</span>
@@ -94,12 +94,12 @@
         </div>
       </div>
     </div>
-    <div class="section-3__keyframe-2 h-[50vh]"></div>
+    <div class="section-3__keyframe-2 h-[25vh]"></div>
     <div class="section-3__keyframe-3 h-[25vh]"></div>
     <div class="section-3__keyframe-4 h-[25vh]"></div>
   </section>
   <section class="section-4 py-16 bg-main-dark lg:px-10">
-    <div class="h-[50vh]"></div>
+    <div class="h-[25vh]"></div>
     <div class="sticky top-0 container max-w-5xl mx-auto">
       <img src="imgs/section-4-img1.png" alt="섹션4 이미지" class="h-fit lg:w-3/5" data-aos="fade-right">
       <div class="lg:absolute top-20 right-0">
@@ -120,7 +120,7 @@
     <div class="section-4__keyframe-3 h-[25vh]"></div>
   </section>
   <section class="section-5 bg-main-light">
-    <div class="keyframe-1 h-[50vh]"></div>
+    <div class="keyframe-1 h-[25vh]"></div>
     <div class="sticky top-0 container max-w-5xl mx-auto py-10">
       <div class="mb-16 sm:mb-0 overflow-hidden md:relative">
         <div class="md:absolute md:top-20 md:left-[128px] lg:left-[90px] xl:left-[60px]">
@@ -142,7 +142,7 @@
     <div class="section-5__keyframe-3 h-[25vh]"></div>
   </section>
   <section class="section-6 bg-main-light">
-    <div class="keyframe-1 h-[50vh]"></div>
+    <div class="keyframe-1 h-[25vh]"></div>
     <div class="sticky top-0 container max-w-5xl mx-auto py-10">
       <div class="md:flex justify-center items-center">
         <div class="md:basis-1/2 md:pl-32 text-center md:text-left">
@@ -185,7 +185,6 @@
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.9/fullpage.min.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({ duration: 1500 });
@@ -226,14 +225,6 @@
         const scrollDownArrow = document.querySelector('.scroll-down-arrow');
         scrollDownArrow.classList.remove('hidden');
       }
-    });
-
-    $(() => {
-      $('.fullpage').fullpage({
-        autoScrolling: true,
-        scrollHorizontally: true,
-        sectionSelector: 'section',
-      });
     });
   </script>
 </body>
